--- a/public/templates/navbar.html
+++ b/public/templates/navbar.html
@@ -10,7 +10,7 @@
 
     <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
       <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link text-white" href="simulasi.html">Simulasi</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="index.html">Simulasi</a></li>
         <li class="nav-item"><a class="nav-link text-white" href="materi.html">Materi</a></li>
         <li class="nav-item"><a class="nav-link text-white" href="latihan.html">Latihan</a></li>
         <li class="nav-item"><a class="nav-link text-white" href="profil.html">Profil Kami</a></li>
