--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,11 +2,13 @@
 
 body {
     background-color: #2b2b35;
-    height: 100vh;
+    font-family: "Poppins", sans-serif;
     display: flex;
     justify-content: center;
-    align-items: center;
-    font-family: "Poppins", sans-serif;
+    align-items: flex-start;
+    min-height: 100vh;
+    overflow-y: auto;
+    padding: 40px 0;
 }
 
 .memoalloc-card {
@@ -116,4 +118,32 @@ body {
     background-color: transparent !important;
     /* border: none !important; */
     color: #fff !important;
+}
+
+#resultExplanation {
+    color: #fff;
+}
+
+#resultTable td, #resultTable th {
+  border: 1px solid #666 !important;
+  text-align: center;
+  vertical-align: middle;
+}
+
+#resultTable i {
+  color: #bbb;
+  font-size: 0.9em;
+}
+
+.result-card {
+    color: #ffffff;
+    border-radius: 20px;
+    padding: 40px;
+    width: 70%;
+}
+
+.result-card h2 {
+    text-align: center;
+    font-weight: 700;
+    margin-bottom: 30px;
 }
