mengubah profil kami menjadi profil

--- a/public/templates/navbar.html
+++ b/public/templates/navbar.html
@@ -13,7 +13,7 @@
         <li class="nav-item"><a class="nav-link text-white" href="index.html">Simulasi</a></li>
         <li class="nav-item"><a class="nav-link text-white" href="materi.html">Materi</a></li>
         <li class="nav-item"><a class="nav-link text-white" href="latihan.html">Latihan</a></li>
-        <li class="nav-item"><a class="nav-link text-white" href="profil.html">Profil Kami</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="profil.html">Profil</a></li>
       </ul>
     </div>
   </div>
