--- a/public/templates/navbar.html
+++ b/public/templates/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top shadow-sm">
   <div class="container">
     <a class="navbar-brand brand fw-bold" style="font-size: 28px;" href="index.html">
-      A<span style="color: #c0d9d9;">lloc</span>
+      <span style="color: #c0d9d9;">Alloc</span>
     </a>
 
     <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown">
