--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1026,8 +1026,10 @@ main.materi-container {
 .nav-pills {
   display: flex;
   justify-content: center;
-  gap: 18px;      /* ⬅️ Ini jarak antar tombol */
-  margin-bottom: 30px;   /* Jarak ke konten bawah */
+  gap: 18px;
+  /* ⬅️ Ini jarak antar tombol */
+  margin-bottom: 30px;
+  /* Jarak ke konten bawah */
 }
 
 .nav-pills .nav-link:hover {
