--- a/public/css/latihan.css
+++ b/public/css/latihan.css
@@ -1,3 +1,8 @@
+@property --score-angle {
+  syntax: '<angle>';
+  inherits: false;
+  initial-value: 0deg;
+}
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 body {
@@ -544,11 +549,14 @@ button#nextBtn.processing {
   width: 150px;
   height: 150px;
   border-radius: 50%;
-  background: conic-gradient(#64ffda var(--score-angle), rgba(255, 255, 255, 0.08) 0deg);
+
+  background: conic-gradient(#64ffda var(--score-angle, 0deg), rgba(255, 255, 255, 0.08) 0deg);
   display: flex;
   align-items: center;
   justify-content: center;
   position: relative;
+
+  transition: --score-angle 2s cubic-bezier(0.34, 1.56, 0.64, 1);
 }
 
 .score-ring::before {
